auto-test/tests/chapter_17/invalid_types/pointer_conversions/usual_arithmetic_conversions_ptr.c
int main(void) {
  
  int i = 10 * (void *)0;
}